# costanza

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .renovaterc.json5  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yaml  scan.yaml  tests.yaml
.mise/: config.toml
config/: routing.example.yaml
deploy/: README.md
docs/: architecture.md  build-notes.md  capability-map.md  handoff.md  open-questions.md  prior-art.md  product-brief.md  risks.md  system-boundaries.md  v1-build-prompt.md
docs/adr/: 0001-service-with-adapters-not-discord-bot.md  0002-durable-store-not-cache-first.md  0003-maintainerr-boundary.md  0004-chaski-boundary.md  0005-llm-and-recommendation-boundary.md  0006-write-safety-and-approval-model.md  0007-council-domain-layer.md  0008-discord-interactions-surface.md  0009-staged-execution.md  0010-tmdb-metadata-dependency.md  0011-downgrade-execution-resolute-sonarr.md
docs/council/: constraint-amendments.md  domain-model.md  execution.md  interactions.md  metadata.md  policy.md  retention-engine.md
docs/history/: v1-build-prompt.md
fixtures/radarr/: NOTES.md  download-new.expected.json  download-new.json  download-upgrade.expected.json  download-upgrade.json  grab.expected.json  grab.json  health-issue.expected.json  health-issue.json  (+10 more)
scripts/: k8s-smoke.sh
tests/: conftest.py  test_api.py  test_constraints.py  test_correlate.py  test_discord_adapter.py  test_hardening.py  test_ingest.py  test_jobs.py  test_normalize.py  test_notify.py  test_reconcile_repair.py  test_render.py  test_store.py
(+102 files in other folders)
