[project]
name = "costanza"
version = "0.1.0"
description = "Household media event hub: observe Seerr/Arr/Tautulli webhooks, correlate timelines, notify Discord"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "apscheduler>=3.10,<4",
    "discord.py>=2.4",
    "prometheus-client>=0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
costanza = "costanza.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/costanza"]

[tool.hatch.build.targets.wheel.force-include]
"src/costanza/store/migrations" = "costanza/store/migrations"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py314"
